--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "npm run serve & npm run server",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "nodemon bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "firebase": "^7.19.1",
+    "firebase-admin": "^9.1.1",
+    "helmet": "^4.1.0",
+    "http-errors": "^1.8.0",
+    "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -26,6 +38,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
